--- a/Routebird/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/Routebird/Resources/Base.lproj/LaunchScreen.storyboard
@@ -18,13 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="stack-1">
-                                <rect key="frame" x="32" y="289.66666666666663" width="329" height="272.66666666666663"/>
+                                <rect key="frame" x="32" y="136" width="329" height="580"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="launchBird" translatesAutoresizingMaskIntoConstraints="NO" id="launch-bird-img">
-                                        <rect key="frame" x="0.0" y="0.0" width="329" height="204.66666666666666"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchBird" translatesAutoresizingMaskIntoConstraints="NO" id="rmZ-bk-PO9">
+                                        <rect key="frame" x="0.0" y="0.0" width="329" height="512"/>
                                     </imageView>
                                     <label contentMode="scaleToFill" text="Route Bird" textAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="launch-title">
-                                        <rect key="frame" x="78.000000000000014" y="228.66666666666669" width="173.33333333333337" height="44"/>
+                                        <rect key="frame" x="78.000000000000014" y="536" width="173.33333333333337" height="44"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                         <color key="textColor" systemColor="systemGreenColor"/>
@@ -39,7 +39,6 @@
                         <constraints>
                             <constraint firstItem="stack-1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cX"/>
                             <constraint firstItem="stack-1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cY"/>
-                            <constraint firstItem="launch-bird-img" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.24" id="img-h"/>
                             <constraint firstItem="stack-1" firstAttribute="leading" secondItem="safe-area" secondAttribute="leading" constant="32" id="left"/>
                             <constraint firstItem="stack-1" firstAttribute="trailing" secondItem="safe-area" secondAttribute="trailing" constant="-32" id="right"/>
                         </constraints>
